# Mercury-SFTP-PGP-Client

./: .env.example  .gitignore  README.md  config.py  logger.py  pyproject.toml
docs/: GPG.md  MeetingSummary.md  PGPInstructions.md  PGPKeyExchangeInstructions.md  Questions.md  SSHInstructions.md  SSHKeyExchangeInstructions.md  Summary.md
option1/: config.py  receive_file.py  send_file.py
option2/: sftp.sh
src/mercury_sftp_pgp_client/: _crypto.py  _logger.py  _pgp.py  _sftp.py  config.py  receive_file.py  send_file.py
tests/: test_end_to_end.py  test_sftp_paths.py
