[tool.poetry]
name = "mercury-sftp-pgp-client"
version = "0.1.0"
description = "Simple SFTP + PGP file transfer client"
authors = ["Your Name"]

packages = [{ include = "mercury_sftp_pgp_client", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.4.0"
pgpy = "^0.6.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
send-file = "mercury_sftp_pgp_client.send_file:main"
receive-file = "mercury_sftp_pgp_client.receive_file:main"
